# xgateway

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  OpenCode.md  README.md  llm-link.db  package-lock.json
.github/: copilot-instructions.md
admin/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
config/: xgateway.railway.yaml  xgateway.yaml  xgateway.yaml.example
data/: llm_link.db
docs/: CONFIG_MANAGEMENT_OPTIMIZATION.md  DESIGN_REVIEW_KEY_SERVICE_PROVIDER.md  DESIGN_SPEC.md  DEVELOPMENT.md  E2E_TEST_REPORT_20260307.md  INTERNAL_TRACING.md  LOAD_BALANCE_REQUIREMENTS.md  MODELS.md  OPTIMIZATION_SUGGESTIONS.md  README.md  TODOS.md  USER_GUIDE.md  provider-model-sources.md  scheduling_strategies.md  visual-specification.md  xgateway.md  设计规范.md
examples/: library_usage.rs  test_providers.rs
migrations/: 001_bootstrap.sql  00202_seed_aliyun.sql  00205_seed_minimax.sql  00209_seed_zhipu.sql  00211_remove_services.sql  00212_seed_openai.sql  00213_seed_anthropic.sql  003_add_driver_to_provider_types.sql  003_conversations.sql  004_request_logs.sql  005_enterprise_schema.sql  006_provider_types_docs_url.sql  006_simplify_roles.sql  007_seed_deepseek.sql  008_add_default_admin.sql  010_add_provider_version.sql  012_add_service_limits.sql  013_add_auth_tokens.sql  014_add_service_id_to_request_logs.sql  018_add_org_owner.sql  019_add_provider_owner.sql  020_add_api_key_protocol.sql
python/: README.md  pyproject.toml
python/src/pyxgateway/: __init__.py  cli.py
scripts/: README-ALL-PROVIDERS.md  README-GLM4.md  ZED-QWEN3-CODER-SETUP.md  build-provider-models.py  check_instances.py  debug-zed-tools.sh  fetch-models.py  fix_providers.py  init_admin.sql  init_test_data.py  provider-models.json  smoke_test.py  start-aider.sh  start-codex.sh  start-openhands.sh  start-zed-glm4.sh  start-zed-seed-code.sh  start_xgateway.sh  switch-provider.sh  test-glm4-models.sh  test-openai.sh  test-other-providers.sh  test-qwen3-coder.sh  test-service-keys-from-json.py  test-tool-persistence.sh  test-xgateway-connectivity.sh  test_openai_compat.py  test_services_smoke.py  test_zai_connectivity.sh  verify-deploy.sh  verify-glm46.sh  zed-glm4-quick.sh  zed-qwen3-coder.sh
src/: lib.rs  main.rs  service.rs  settings.rs  tuner.rs  xtrace.rs
tests/: PROVIDER_E2E_DEBUG_REPORT_2026-03-05.md  README.md  config_cli_test.rs  config_env_test.rs  config_test.rs  integration_pool_tests.rs  pool_tests.rs  real_provider_tests.rs  test_advanced_scenarios.sh  test_all_providers.sh  test_api_info.sh  test_api_key_multi_instance_models.sh  test_api_key_priority_and_lb.sh  test_api_keys.sh  test_concurrency.py  test_endpoints.rs  test_hot_reload.py  test_llm_providers.rs  test_log_persistence.py  test_minimax.sh  test_minimax_full.sh  test_minimax_real.sh  test_models_api.sh  test_ollama_tools.sh  test_service_keys_from_json.sh  test_strict_access.sh  test_tool_call_format.sh  test_volcengine_streaming.sh  verify_fixes.sh  (+3 more)
(+346 files in other folders)
