[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxgateway"
version = "0.12.3"
description = "Python wrapper that downloads and launches the xgateway binary"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [{ name = "XGateway Maintainers" }]
license = { text = "MIT" }
keywords = ["llm", "proxy", "cli"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Topic :: Software Development :: Libraries"
]

[project.urls]
Homepage = "https://github.com/lipish/xgateway"
Repository = "https://github.com/lipish/xgateway"
Issues = "https://github.com/lipish/xgateway/issues"

[project.scripts]
xgateway = "pyxgateway.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
